fix: add min-width: fit-content
so that th
e text doe
sn't look li
ke this

--- a/src/Elems/MainElems/Data.css
+++ b/src/Elems/MainElems/Data.css
@@ -9,6 +9,7 @@
 
 .DataLabelText {
    padding-right: inherit;
+   min-width: fit-content;
 }
 
 .Data {
